--- a/d2lExpandCollapsSidePanel/d2lExpandCollapsSidePanel.html
+++ b/d2lExpandCollapsSidePanel/d2lExpandCollapsSidePanel.html
@@ -1,5 +1,5 @@
 <!--
-To be used as
+To be used as in Brightspace HTML content editor as an embedded iframe.
 <p style="margin: 0;"><iframe src="/content/enforced/<your-course-id>/d2lExpandCollapsSidePanel.html" style="border: none; height: 40px; width: 100%; overflow: hidden;"></iframe></p>
 -->
 
